Moved references to current published plot types, added new reference to existing browser, updated third case study

--- a/main.bib
+++ b/main.bib
@@ -271,3 +271,13 @@
   year={2010},
   publisher={American Medical Association}
 }
+@article{huang2017msignaturedb,
+  title={mSignatureDB: a database for deciphering mutational signatures in human cancers},
+  author={Huang, Po-Jung and Chiu, Ling-Ya and Lee, Chi-Ching and Yeh, Yuan-Ming and Huang, Kuo-Yang and Chiu, Cheng-Hsun and Tang, Petrus},
+  journal={Nucleic acids research},
+  volume={46},
+  number={D1},
+  pages={D964--D970},
+  year={2017},
+  publisher={Oxford University Press}
+}
