--- a/main.tex
+++ b/main.tex
@@ -204,7 +204,7 @@ Further analysis is required to determine whether this event can be attributed t
 \begin{figure}[h]
     \centering
     \frame{\includegraphics[width=0.75\columnwidth]{figures/case_study3.png}}
-    \caption{Screenshot of Rainfall Plot with overlay identifying undetected kataegis region}
+    \caption{Screenshot of Rainfall Plot with overlay identifying undetected region of interest}
     \label{fig:caseStudy3}
 \end{figure}
 
